--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,6 @@
 v1.0
-	-Сделать главную страницу( аву и id, email юзера)
-	-Сделать страницу настроек( только смена авы) в табконтрол
++	-Сделать главную страницу( аву и id, email юзера)
++	-Сделать страницу настроек( только смена авы) в табконтрол
 	-Кнопка LogOut
 	
 v1.1
