--- a/TODO.txt
+++ b/TODO.txt
@@ -1,7 +1,7 @@
 v1.0
 +	-—делать главную страницу( аву и id, email юзера)
 +	-—делать страницу настроек( только смена авы) в табконтрол
-	- нопка LogOut
++	- нопка LogOut
 	
 v1.1
 	-‘икс багов
