--- a/TODO.txt
+++ b/TODO.txt
@@ -4,13 +4,12 @@ v1.0
 +	-Кнопка LogOut
 	
 v1.1
-	-Фикс багов
-	эту версию показать преподу
++	-Фикс багов
 v1.2
-	-Добавить количество непрочитанныых сообщений
+	-Добавить количество непрочитанных сообщений
 	-Сделать нормальную страницу настроек( со множеством пунктов)
 	-Добавить оповещения на главную страницу
-	-В идеале обновить схему БД
-
+v1.3
+	-Сделать нормальный дизайн)
 После 1.2 за пару дней бахнуть мобильную версию
 	
